ADD 'sticky' option

--- a/lib/app/views/partials/_ribbon.html.erb
+++ b/lib/app/views/partials/_ribbon.html.erb
@@ -2,7 +2,7 @@
 
 <% if Rails.env.development? || Rails.env.send("#{config.staging_name}?") %>
 
-<div id="ribbon" class="ribbon <%= config.position %> <%= config.hide_for_small ? 'hide-for-small' : '' %>">
+<div id="ribbon" class="ribbon <%= config.position %> <%= config.hide_for_small ? 'hide-for-small' : '' %> <%= config.sticky ? 'sticky' : '' %>">
   <div class="ribbon-container <%= config.themes[Rails.env.to_sym] %>">
     <span class="env"><%= Rails.env.capitalize %></span>
 
