Proposed simplification and extension
Related to issue #22 ( config for production )

--- a/lib/app/views/partials/_ribbon.html.erb
+++ b/lib/app/views/partials/_ribbon.html.erb
@@ -1,6 +1,6 @@
 <% config = Ribbonit.configuration %>
 
-<% if Rails.env.development? || Rails.env.send("#{config.staging_name}?") %>
+<% if config.themes.keys.include? Rails.env %>
 
 <div id="ribbon" class="ribbon ribbon--<%= config.position %> <%= config.hide_for_small ? 'ribbon--hide-for-small' : '' %> <%= config.sticky ? 'ribbon--sticky' : '' %> ribbon--<%= line_count %>-lines">
   <div class="ribbon__container ribbon__container--<%= config.themes[Rails.env.to_sym] %>">
