REFACTOR way to define environments to apply
Some developers can define multiples environements other than
`development` or `staging`. With the actual code, it is not
possible to use the `ribbon`. Instead, a better way is to let
users to define inside the `themes` key which environements
and colors they want :)

Details:
- UPDATE conditions to display `ribbon`
- REMOVE unused configuration
- UPDATE documentation

--- a/lib/app/views/partials/_lines.html.erb
+++ b/lib/app/views/partials/_lines.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 </span>
 
-<% if config.infos_to_display.include?(:git_branch) && Rails.env.development? %>
+<% if config.infos_to_display.include?(:git_branch) %>
   <span class="ribbon__container__git">
     Branch: <strong><%= branch_name %></strong>
   </span>
