Refactor gem structure
Details:
- Rename `Ribbonit` to `ribbonit`
- Move the `app/` folder structure from `/lib` to root
- Move `stylesheets/` folder from `vendor` to `app/assets/`
- Remove `sassc` gem dependency [BREAKING]
- Convert style to native css using variables

--- a/app/views/application/_ribbon.html.erb
+++ b/app/views/application/_ribbon.html.erb
@@ -6,10 +6,10 @@
   <div class="ribbon__container ribbon__container--<%= config.themes[Rails.env.to_sym] %>">
     <% if config.root_link %>
       <%= link_to root_url do %>
-        <%= render '/lines', config: config %>
+        <%= render 'lines', config: config %>
       <% end %>
     <% else %>
-      <%= render '/lines', config: config %>
+      <%= render 'lines', config: config %>
     <% end %>
   </div>
 </div>
